--- a/views/admin/goods/input.ejs
+++ b/views/admin/goods/input.ejs
@@ -6,63 +6,74 @@
   <link rel='stylesheet' href='/stylesheets/admin/goods.css' />
 </head>
 <div>
-  <div class="input-div">
-    <label>goods_major_classification</label>
-    <select id="goods_major_classification" name="goods_major_classification" onchange="setSubClassification()"></select>
-  </div>
-  <div class="input-div">
-    <label>goods_sub_classification</label>
-    <select id="goods_sub_classification" name="goods_sub_classification"></select>
-  </div>
-  <div class="input-div">
-    <label>stock_quantity</label>
-    <input type="text" name="stock_quantity">
-  </div>
-  <div class="input-div">
-    <label>price</label>
-    <input type="text" name="price">
-  </div>
-  <div class="input-div">
-    <label>chn_title</label>
-    <input type="text" name="chn_title">
-  </div>
-  <div class="input-div">
-    <label>chn_subtitle</label>
-    <input type="text" name="chn_subtitle">
-  </div>
-  <div class="input-div">
-    <label>chn_info</label>
-    <input type="text" name="chn_info">
-  </div>
-  <div class="input-div">
-    <label>kor_title</label>
-    <input type="text" name="kor_title">
-  </div>
-  <div class="input-div">
-    <label>kor_subtitle</label>
-    <input type="text" name="kor_subtitle">
-  </div>
-  <div class="input-div">
-    <label>kor_info</label>
-    <input type="text" name="kor_info">
-  </div>
-  <div class="input-div">
-    <label>overseas_flag</label>
-    <input type="text" name="overseas_flag">
-  </div>
-  <div class="input-div">
-    <label>top_image_add</label>
-    <input type="button" name="image_add" value="ADD" onclick="">
-  </div>
-  <div class="input-div top_iamge_add_form">
-    <input type="file" name="top_image">
-  </div>
+  <form action="input/save" method="post" enctype="multipart/form-data">
+    <div class="input-div">
+      <label>goods_major_classification</label>
+      <select id="goods_major_classification" name="goods_major_classification" onchange="setSubClassification()"></select>
+    </div>
+    <div class="input-div">
+      <label>goods_sub_classification</label>
+      <select id="goods_sub_classification" name="goods_sub_classification"></select>
+    </div>
+    <div class="input-div">
+      <label>stock_quantity</label>
+      <input type="text" name="stock_quantity" value="9999">
+    </div>
+    <div class="input-div">
+      <label>price</label>
+      <input type="text" name="price" value="31000">
+    </div>
+    <div class="input-div">
+      <label>chn_title</label>
+      <input type="text" name="chn_title" maxlength="45" value="化妆品1">
+    </div>
+    <div class="input-div">
+      <label>chn_subtitle</label>
+      <input type="text" name="chn_subtitle" maxlength="100" value="化妆品1化妆品1">
+    </div>
+    <div class="input-div">
+      <label>chn_info</label>
+      <textarea name="chn_info" maxlength="1000">化妆品1化妆品1化妆品1化妆品1化妆品1</textarea>
+    </div>
+    <div class="input-div">
+      <label>kor_title</label>
+      <input type="text" name="kor_title" maxlength="45" value="화장품1">
+    </div>
+    <div class="input-div">
+      <label>kor_subtitle</label>
+      <input type="text" name="kor_subtitle" maxlength="100" value="화장품1화장품1">
+    </div>
+    <div class="input-div">
+      <label>kor_info</label>
+      <textarea name="kor_info" maxlength="1000">화장품1화장품1화장품1</textarea>
+    </div>
+    <div class="input-div">
+      <label>overseas_flag</label>
+      <select id="overseas_flag" name="overseas_flag">
+        <option value="1" selected="selected">YES</option>
+        <option value="0">NO</option>
+      </select>
+    </div>
+    <div class="input-div">
+      <label>top_image_add</label>
+      <input type="button" value="ADD" onclick="topImageFormAdd()">
+    </div>
+    <div class="input-div top_iamge_add_form">
+    </div>
+    <div class="input-div">
+      <label>info_image_add</label>
+      <input type="button" value="ADD" onclick="infoImageFormAdd()">
+    </div>
+    <div class="input-div info_iamge_add_form">
+    </div>
+    <input type="submit" value="submit">
+  </form>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="/javascripts/admin/goods.js"></script>
 <script type="text/javascript">
 $(function() {
-	setMajorClassification();
+  setMajorClassification();
 });
 </script>
 </body>
