1. 결제할 때 id로 openid가져오기 2. 결제정보리스트 완성

--- a/views/testPay.ejs
+++ b/views/testPay.ejs
@@ -13,23 +13,23 @@
 </body>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script type="text/javascript">
-function goPaySign() {
-  $.ajax({
-    url: "http://www.tndnchina.cn/pay/wechatSign",
-    type: "post",
-    data: {
-      priceChnSale: $('#priceChnSale').val(),
-    resName  : $('#resName').val(),
-      openid: $('#openid').val()
-    },
-    dataType: "JSON",
-    success: function(data) {
+// function goPaySign() {
+//   $.ajax({
+//     url: "http://www.tndnchina.cn/pay/wechatSign",
+//     type: "post",
+//     data: {
+//       priceChnSale: $('#priceChnSale').val(),
+//     resName  : $('#resName').val(),
+//       openid: $('#openid').val()
+//     },
+//     dataType: "JSON",
+//     success: function(data) {
       callpay(data);
-    },
-    error: function(xhr, status, error) {
-    }
-  });
-}
+//     },
+//     error: function(xhr, status, error) {
+//     }
+//   });
+// }
 
 function jsApiCall(data) {
   WeixinJSBridge.invoke('getBrandWCPayRequest', {
